--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "ext-json": "*"
     },
     "require-dev": {
+        "phpstan/phpstan": "^0.12.50",
         "symfony/maker-bundle": "^1.21",
         "symfony/stopwatch": "^5.1",
         "symfony/web-profiler-bundle": "^5.1"
